--- a/package.json
+++ b/package.json
@@ -1,30 +1,35 @@
 {
-  "name": "stickersmash",
-  "version": "1.0.0",
-  "main": "expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
-    "expo": "~51.0.11",
-    "expo-image-picker": "~15.0.5",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.2",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-view-shot": "3.8.0",
-    "expo-media-library": "~16.0.3"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "^18.3.3",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
-  },
-  "private": true
+   "name": "stickersmash",
+   "version": "1.0.0",
+   "main": "expo/AppEntry.js",
+   "scripts": {
+      "start": "expo start",
+      "android": "expo start --android",
+      "ios": "expo start --ios",
+      "web": "expo start --web"
+   },
+   "dependencies": {
+      "@expo/metro-runtime": "~3.2.1",
+      "@expo/vector-icons": "^14.0.0",
+      "dom-to-image": "^2.6.0",
+      "expo": "~51.0.14",
+      "expo-image-picker": "~15.0.5",
+      "expo-media-library": "~16.0.3",
+      "expo-status-bar": "~1.12.1",
+      "react": "18.2.0",
+      "react-dom": "18.2.0",
+      "react-native": "0.74.2",
+      "react-native-gesture-handler": "~2.16.1",
+      "react-native-reanimated": "~3.10.1",
+      "react-native-view-shot": "3.8.0",
+      "react-native-web": "~0.19.10"
+   },
+   "devDependencies": {
+      "@babel/core": "^7.20.0",
+      "@types/dom-to-image": "^2.6.7",
+      "@types/react": "~18.2.79",
+      "ts-node": "^10.9.2",
+      "typescript": "~5.3.3"
+   },
+   "private": true
 }
