--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
       "start": "expo start",
       "android": "expo start --android",
       "ios": "expo start --ios",
-      "web": "expo start --web"
+      "web": "expo start --web",
+      "dev": "APP_VARIANT=development npx expo start",
+      "build:preview": "eas build --platform android --profile preview"
    },
    "dependencies": {
       "@expo/metro-runtime": "~3.2.1",
@@ -22,7 +24,8 @@
       "react-native-gesture-handler": "~2.16.1",
       "react-native-reanimated": "~3.10.1",
       "react-native-view-shot": "3.8.0",
-      "react-native-web": "~0.19.10"
+      "react-native-web": "~0.19.10",
+      "expo-dev-client": "~4.0.18"
    },
    "devDependencies": {
       "@babel/core": "^7.20.0",
