--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
       "@expo/vector-icons": "^14.0.0",
       "dom-to-image": "^2.6.0",
       "expo": "~51.0.14",
+      "expo-dev-client": "~4.0.18",
       "expo-image-picker": "~15.0.5",
       "expo-media-library": "~16.0.3",
       "expo-status-bar": "~1.12.1",
@@ -24,13 +25,16 @@
       "react-native-gesture-handler": "~2.16.1",
       "react-native-reanimated": "~3.10.1",
       "react-native-view-shot": "3.8.0",
-      "react-native-web": "~0.19.10",
-      "expo-dev-client": "~4.0.18"
+      "react-native-web": "~0.19.10"
    },
    "devDependencies": {
       "@babel/core": "^7.20.0",
       "@types/dom-to-image": "^2.6.7",
       "@types/react": "~18.2.79",
+      "install": "^0.13.0",
+      "npm": "^10.8.1",
+      "react-native-root-siblings": "^5.0.1",
+      "react-native-root-toast": "^3.6.0",
       "ts-node": "^10.9.2",
       "typescript": "~5.3.3"
    },
