--- a/package.json
+++ b/package.json
@@ -1,48 +1,49 @@
 {
-   "name": "stickersmash",
-   "version": "1.0.0",
-   "main": "expo-router/entry.js",
-   "scripts": {
-      "start": "expo start",
-      "android": "expo start --android",
-      "ios": "expo start --ios",
-      "web": "expo start --web",
-      "dev": "APP_VARIANT=development npx expo start",
-      "build:preview": "eas build --platform android --profile preview"
-   },
-   "dependencies": {
-      "@expo/metro-runtime": "~3.2.1",
-      "@expo/vector-icons": "^14.0.0",
-      "dom-to-image": "^2.6.0",
-      "expo": "~51.0.14",
-      "expo-constants": "~16.0.2",
-      "expo-dev-client": "~4.0.18",
-      "expo-image-picker": "~15.0.5",
-      "expo-linking": "~6.3.1",
-      "expo-media-library": "~16.0.3",
-      "expo-router": "~3.5.16",
-      "expo-status-bar": "~1.12.1",
-      "react": "18.2.0",
-      "react-dom": "18.2.0",
-      "react-native": "0.74.2",
-      "react-native-gesture-handler": "~2.16.1",
-      "react-native-reanimated": "~3.10.1",
-      "react-native-safe-area-context": "4.10.1",
-      "react-native-screens": "3.31.1",
-      "react-native-view-shot": "3.8.0",
-      "react-native-web": "~0.19.10"
-   },
-   "devDependencies": {
-      "@babel/core": "^7.20.0",
-      "@types/dom-to-image": "^2.6.7",
-      "@types/react": "~18.2.79",
-      "babel-plugin-module-resolver": "^5.0.2",
-      "install": "^0.13.0",
-      "npm": "^10.8.1",
-      "react-native-root-siblings": "^5.0.1",
-      "react-native-root-toast": "^3.6.0",
-      "ts-node": "^10.9.2",
-      "typescript": "~5.3.3"
-   },
-   "private": true
+  "name": "stickersmash",
+  "version": "1.0.0",
+  "main": "expo-router/entry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "dev": "APP_VARIANT=development npx expo start",
+    "build:preview": "eas build --platform android --profile preview"
+  },
+  "dependencies": {
+    "@expo/metro-runtime": "~3.2.1",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "dom-to-image": "^2.6.0",
+    "expo": "^51.0.14",
+    "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.18",
+    "expo-image-picker": "~15.0.5",
+    "expo-linking": "~6.3.1",
+    "expo-media-library": "~16.0.3",
+    "expo-router": "~3.5.16",
+    "expo-status-bar": "~1.12.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.2",
+    "react-native-gesture-handler": "^2.17.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.32.0",
+    "react-native-view-shot": "3.8.0",
+    "react-native-web": "~0.19.10"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.24.0",
+    "@types/dom-to-image": "^2.6.7",
+    "@types/react": "~18.2.79",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "install": "^0.13.0",
+    "npm": "^10.8.1",
+    "react-native-root-siblings": "^5.0.1",
+    "react-native-root-toast": "^3.6.0",
+    "ts-node": "^10.9.2",
+    "typescript": "~5.3.3"
+  },
+  "private": true
 }
